# freetds

./: .gitignore  Makefile.am  balabit-build  balabit-unix-build  configure.ac  freetds.conf
debian/: changelog  control  copyright  dirs  freetds-dev.links  libct3.dirs  libct3.examples  libct3.files  libct3.manifest  libct3.postinst  libsybdb5.links  libsybdb5.manifest  rules
debian/po/: de.po
include/: cspublic.h
include/freetds/: tds.h
pe-build/: build
sbuild/: builder.py  config.yml  configure_opts.py
src/: Makefile.am
src/ctlib/: ct.c
src/odbc/: connectparams.c
src/odbc/unittests/: Makefile.am
src/tds/: tls.c  token.c
srelease/: platforms
tgz2build/: Makefile.am  freetds-dev.files  libct3.files  libsybdb5.files  rules  tgz2deps
